--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=REM:wght@400;500&display=swap');
+
 /* Redundant Classes */
 *{
     padding: 0;
@@ -6,7 +8,8 @@
 }
 
 body{
-    background-color: #161316;
+    font-family: 'REM', sans-serif;
+    background-color: #404258;
     color: white;
 }
 
@@ -19,7 +22,7 @@ li{
     display: flex;
     justify-content: center;
     align-items: center;
-    height:50vh;
+    min-height: 100vh;
 }
 
 .app{
@@ -28,6 +31,7 @@ li{
     align-items: center;
     justify-content: center;
     padding: 50px;
+    max-width: 500px;
 }
 
 .input-task{
@@ -39,38 +43,44 @@ li{
 
 .new-task-input {
     font-size: 2rem;
-    margin: 0 10px;
-    padding: 15px;
-    border: none;
-    border-radius: 30px ;
+    padding: 8px;
 }
 
-.new-task-btn{
-    font-size: 50px;
-    padding: 0 15px;
-    border: none;
-    border-radius: 50%;
+.add-task-btn{
+    margin: 10px;
+    padding: 5px;
+    font-size: 2rem;
 }
 
-.new-task{
+#task-list{
+    width: 100%;
+}
+
+.task-wrapper{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    text-align: center;
+    margin: 25px 0;
+    width: 100%;
 }
 
-.new-task_checkbox{
+.task-checkbox{
     height: 25px;
     width: 25px;
 }
 
-.new-task_title{
-    font-size: 2rem;
+.task-title{
+    font-size: 32px;
+    font-weight: 200;
 }
 
-.new-task_title,
-.new-task_checkbox{
-    margin: 0 10px;
+.remove-task{ 
+   font-size: 25px;
+   color: #fff;
+   padding: 5px 15px;
+   background-color: red;
 }
 
 
