--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 body{
     font-family: 'REM', sans-serif;
-    background-color: #404258;
+    background-image: url(./assets/acampar-en-invierno-lofi_5120x2880_xtrafondos.com.jpg);
     color: white;
 }
 
@@ -32,6 +32,9 @@ li{
     justify-content: center;
     padding: 50px;
     max-width: 500px;
+    -webkit-backdrop-filter: blur(8px);  /* Safari 9+ */
+    backdrop-filter: blur(8px); /* Chrome and Opera */
+    box-shadow: inset 0 0 0 200px rgba(255,255,255,0.08);
 }
 
 .input-task{
@@ -39,17 +42,22 @@ li{
     justify-content: center;
     align-items: center;
     margin: 16px;
+    position: relative;
 }
 
 .new-task-input {
     font-size: 2rem;
     padding: 8px;
+    width: 100%;
 }
 
 .add-task-btn{
-    margin: 10px;
-    padding: 5px;
+    margin: 20px 0 20px 20px;
+    padding: 10px 15px;
     font-size: 2rem;
+    color: black;
+    position: absolute;
+    right:2px;
 }
 
 #task-list{
